--- a/index.css
+++ b/index.css
@@ -1,76 +1,68 @@
 body {
-    margin: 0;
-    
+  margin: 0;
 }
 
 .container {
-    display: flex;
-    justify-content: space-around;
-    width: 575px;
-    height: 385px;
-    background: #1B244A;
+  display: flex;
+  justify-content: space-around;
+  width: 575px;
+  height: 385px;
+  margin: 100px auto;
+  background: #1b244a;
 }
-h3{
-    /* board-title-home */
-    position: absolute;
-    width: 149px;
-    height: 36px;
-    font-family: 'Verdana';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 36px;
-    /* identical to box height, or 90% */
-    text-align: center;
-    color: #EEEEEE;
-
-
-}
-
-.scorebord{
-
-        /* position: absolute; */
-     
-    background-color: #080001;
-    font-family: 'Cursed Timer ULiL';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 90px;
-    line-height: 127px;
-    text-align: center;
-    color: #F94F6D;
-    width: 155px;
-    height: 120px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    
-
-                                                                                
+h3 {
+  /* board-title-home */
+  position: absolute;
+  width: 149px;
+  height: 36px;
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 36px;
+  /* identical to box height, or 90% */
+  text-align: center;
+  color: #eeeeee;
 }
 
-.Btn1, .Btn2, .Btn3{
-    /* position: absolute; */
-    width: 45px;
-    height: 45px;
-    top: 271px;
-    left: 337px;
-    margin-left: 3px;
-    opacity: 1;
-    font-family: 'Cursed Timer ULiL';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    /* or 155% */
-    text-align: center;
-    color: #9AABD8;
-    background-color: #1B244A;
-    border: 2px solid #9AABD8;
-    border-radius: 5px;
-    cursor: pointer;
+.scorebord {
+  /* position: absolute; */
+
+  background-color: #080001;
+  font-family: 'Cursed Timer ULiL';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 90px;
+  line-height: 127px;
+  text-align: center;
+  color: #f94f6d;
+  width: 155px;
+  height: 120px;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
-
+.Btn1,
+.Btn2,
+.Btn3 {
+  /* position: absolute; */
+  width: 45px;
+  height: 45px;
+  top: 271px;
+  left: 337px;
+  margin-left: 3px;
+  opacity: 1;
+  font-family: 'Cursed Timer ULiL';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  /* or 155% */
+  text-align: center;
+  color: #9aabd8;
+  background-color: #1b244a;
+  border: 2px solid #9aabd8;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
 /* /* home-points-text */
-
-
